update system user details

--- a/modules/schools/client/views/form-school.client.view.html
+++ b/modules/schools/client/views/form-school.client.view.html
@@ -308,7 +308,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#" ng-click="vm.createStudent('lg');">Add New <span class="sr-only">(current)</span></a></li>   
-        
+         <li><a href="#" ng-click="vm.uploadStudent('lg');">Upload <span class="sr-only">(current)</span></a></li>
       </ul>
       <!--<form class="navbar-form navbar-left">
         
