--- a/modules/students/client/views/form-student.client.view.html
+++ b/modules/students/client/views/form-student.client.view.html
@@ -87,7 +87,7 @@
                         <label class="col-md-2"> Current Class</label>
                         <div class="col-md-4">
                             <!--<input class="form-control" type="text" ng-model="vm.student.class" id="picture" placeholder="picture" />-->
-                         <!--<select class="form-control" id="currentclass" ng-model="vm.student.currentclass" ng-options=" class._id as class.name for class in vm.school.schoolclasses"  >-->
+                         <select class="form-control" id="currentclass" ng-model="vm.student.currentclass" ng-options=" class._id as class.name for class in vm.schoolclasses"  >
                              
                              
      
